# rl-atari

./: README.md  flake.nix  hydra.yaml  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
configs/agent/: deep_qlearning.yaml  deep_qlearning_first_preprocessing.yaml  deep_qlearning_low_decay.yaml  deep_qlearning_optimized.yaml  deep_qlearning_optimized2.yaml  deep_qlearning_optimized3.yaml  deep_qlearning_replay.yaml  deep_qlearning_stacking.yaml  deep_qlearning_stacking2.yaml  deep_qlearning_stacking_adamw.yaml  deep_qlearning_stacking_adamw_v3.yaml  deep_qlearning_stacking_clipping.yaml  deep_qlearning_stacking_v1.yaml  deep_qlearning_stacking_with_v3.yaml  deep_qlearning_v2.yaml  deep_qlearning_very_low_decay.yaml  deep_qlearning_very_low_decay_adam.yaml  deep_qlearning_very_low_decay_adam2.yaml  dqn.yaml  qlearning.yaml  qlearning_decay.yaml  sarsa.yaml
configs/evaluation/: default.yaml  no_video.yaml
configs/optimizer/: default.yaml  rmsprop.yaml  sgd.yaml
configs/training/: default.yaml  default_optimized.yaml  longer.yaml  longer_episode.yaml  longer_episode_shorter_steps.yaml  quick.yaml
models/: __init__.py  abstract.py  qlearning.py  qlearning_decay.py  sarsa.py
pipeline/: __init__.py  rl_trainer.py
src/: dev.py  main.py
src/agent/: __init__.py  buffer.py  dqn.py  dqn_decay.py  dqn_stacking.py
src/models/: __init__.py  abstract.py  base.py  dqn.py  dqn_decay.py  dqn_decay_v2.py  dqn_with_replay.py  v2.py  v3.py
src/pipeline/: __init__.py  rl_trainer.py  rl_trainer_stacking.py  rl_trainer_v2.py
