[project]
name = "atari"
version = "0.1.0"
description = "Atari RL"
readme = "README.md"
dependencies = [
    "ale-py>=0.11.2",
    "autorom[accept-rom-license]>=0.6.1",
    "gymnasium[atari]>=1.2.2",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "ruff>=0.14.3",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

